# chartset-normalizer-python-rs

./: .gitignore  Cargo.toml  DEPLOYMENT.md  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  deploy.yml
src/charset_normalizer_rs/: __init__.py
src/charsetrs/: __init__.py
src/core/: lib.rs
tests/: test_charsetrs_api.py  test_coherence_detection.py  test_full_detection.py  test_integration.py  test_streaming.py
